trying to fix the scroll issue on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,8 @@ canvas {
     @apply opacity-0 translate-y-[100px]
   }
 }
+
+main {
+  touch-action: pan-y;
+  overflow-y: auto;
+}
